[tool.poetry]
name = "raccoon-client"
version = "0.1.0"
description = "A python client to serve requests to raccoon server"
authors = ["Punit Kulal <punitkulal1996@gmail.com>"]
readme = "README.md"
packages = [{include = "raccoon_client"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
protobuf = "^4.23.4"
google = "^3.0.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '.*_pb2.py|.*_pb2.pyi'
